feat(users-delete): add delete update controller, route, and repository
